--- a/flex-ex-3/styles.css
+++ b/flex-ex-3/styles.css
@@ -4,22 +4,54 @@
 }
 
 
-.navigation{
-    background-color: rgb(139, 53, 139);
-    padding: 10px;
-    color: white;
-    font-weight: bold;
-    font-size: large;
 
-}
+.header{
 
-.sidebar{
     background-color: rgb(103, 67, 221);
     padding: 25px;
     color: white;
     font-weight: bold;
-    font-size: large;
-    display: flex;    
-    flex-shrink: 1;
+    font-size: x-large;
+    display: flex;
+
 }
+a{
+    color: white;
+    text-decoration: none;
+    margin: 0 10px;
+}
+li{
+    list-style: none;
+    margin: 10px 0px;
+
+}
+
+.sidebar{
+    background-color: rgb(27, 80, 213);
+    padding: 25px;
+    color: white;
+    font-size: large;
+}
+
+
+
+.card {
+    border: 1px solid #eee;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+    width: 20%;
+  }
+  
+  .container{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    flex-direction: column;
+  }
+
+
+  .body{
+    display: flex;
+    flex-wrap: wrap;
+  }
 
