--- a/flex-ex-3/styles.css
+++ b/flex-ex-3/styles.css
@@ -1,36 +1,74 @@
-*{
-    margin: 0%;
-    padding: 0%;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin: 0;
+    min-height: 100vh;
+  }
+  
+  .header {
+    height: 72px;
+    background: darkmagenta;
+    color: white;
+  }
+  
+  .footer {
+    height: 72px;
+    background: #eee;
+    color: darkmagenta;
+  }
+  
+  .sidebar {
+    width: 300px;
+    background: royalblue;
+    box-sizing: border-box;
+  }
+  
+  .card {
+    border: 1px solid #eee;
+    box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+    border-radius: 4px;
+  }
+
+  body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+  }
+
+.body{
+  flex: 1;
+  display: flex;
 }
-
-
 
 .header{
 
     background-color: rgb(103, 67, 221);
     padding: 25px;
     color: white;
+    align-items: center;
     font-weight: bold;
     font-size: x-large;
     display: flex;
 
 }
+
 a{
     color: white;
     text-decoration: none;
     margin: 0 10px;
-}
-li{
+    }
+
+    li{
     list-style: none;
     margin: 10px 0px;
 
 }
 
-.sidebar{
-    background-color: rgb(27, 80, 213);
-    padding: 25px;
-    color: white;
-    font-size: large;
+
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 32px;
+  padding: 48px;
 }
 
 
@@ -39,19 +77,28 @@ li{
     border: 1px solid #eee;
     box-shadow: 2px 4px 16px rgba(0,0,0,.06);
     border-radius: 4px;
+    padding: 6px;
     width: 20%;
   }
+
+
+
+
+.sidebar{
+    background-color: rgb(27, 80, 213);
+    padding: 25px;
+    color: white;
+    flex-shrink: 0;
+    font-size: large;
+}
+
   
-  .container{
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
-  }
 
 
-  .body{
+  .footer{
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    background-color: antiquewhite;
+    padding: 10px;  
   }
 
